Make credential scan binary-safe